fix text alignment in gave.js

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@ body {
     pointer-events: none;
 }
 
+div {
+    box-sizing: border-box;
+}
+
 @media screen and (max-height: 500px) {
     .hideonsmheight {
         display: none;
